# graphafold-analysis

./: .gitignore  _metrics.py  desc_lengs.py  grapha_convert.ipynb  graphs_stats.py  metrics_as_matrix.py  preds_to_helix.py  pyproject.toml  sequence_extractor.py  sincfold_predict.sh  sincfold_results.csv  spotrna_long_results.csv  structural-elements-analysis.py  ufold_results.csv  visualizations.ipynb  visualize_distributions.ipynb
csvs/: graphafold_results.csv  sincfold_results.csv  spotrna_results.csv  ufold_results.csv
distributions/: graphafold_casp_7PTK.csv  graphafold_casp_7PTL.csv  graphafold_casp_7QR3.csv  graphafold_casp_7QR4.csv  graphafold_casp_7YR6.csv  graphafold_casp_7YR7.csv  graphafold_casp_7ZJ4.csv  graphafold_casp_8BTZ.csv  graphafold_casp_8FZA.csv  graphafold_casp_8S95.csv  graphafold_casp_8TVZ.csv  graphafold_casp_8UO6.csv  graphafold_casp_8UYE.csv  graphafold_casp_8UYG.csv  graphafold_casp_8UYJ.csv  graphafold_casp_8UYS.csv  graphafold_casp_9B0L.csv  graphafold_casp_9BZ1.csv  graphafold_casp_9BZC.csv  graphafold_casp_all.csv  gt_7YR6.csv  gt_7YR7.csv  gt_7ZJ4.csv  gt_8BTZ.csv  gt_8FZA.csv  gt_8S95.csv  gt_8TVZ.csv  gt_8UO6.csv  gt_8UYE.csv  gt_8UYG.csv  gt_8UYJ.csv  gt_8UYS.csv  gt_9B0L.csv  gt_9BZ1.csv  gt_9BZC.csv  sincfold_7ZJ4.csv  sincfold_8BTZ.csv  sincfold_8FZA.csv  sincfold_8TVZ.csv  sincfold_8UYG.csv  (+20 more)
graphafold_casp_results/: 7PTK.helix  7PTL.helix  7QR3.helix  7QR4.helix  7YR6.helix  7YR7.helix  7ZJ4.helix  8BTZ.helix  8FZA.helix  8S95.helix  8TVZ.helix  8UO6.helix  8UYE.helix  8UYG.helix  8UYJ.helix  8UYS.helix  9B0L.helix  9BZ1.helix  9BZC.helix
graphafold_large_preds/: tp_fn_fp.py
graphafold_results/: results-casp.csv  results-dataset.csv  results-puzzles.csv
sincfold_results/: 7QR3.ct  7QR4.ct  7YR6.ct  7YR6.helix  7YR7.ct  7YR7.helix  7ZJ4.ct  7ZJ4.helix  8BTZ.ct  8BTZ.helix  8FZA.ct  8FZA.helix  8S95.ct  8TVZ.ct  (+18 more)
(+100 files in other folders)
